--- a/css/component.css
+++ b/css/component.css
@@ -9,15 +9,15 @@
 /* General styles and layout */
 
 body {
-	background: #87CEFF;
+	background: #333;
 	color: #FF82AB;
 	font-family: 'Lato', Arial, sans-serif;
 }
 body.2 {
-	background: #3498db
+	background: #333;
 }
 #2 {
-	background: #3498db
+	background: #333;
 }
 
 .container {
@@ -47,7 +47,9 @@ section h2 {
 }
 
 section p {
-	color: rgba(0,0,0,.3);
+  color: white;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
 	font-size: 1.3em;
 	line-height: 1.5;
 }
@@ -100,13 +102,13 @@ section.color h2 {
 	background: #87ceff;
 }
 .color2 {
-	background: #7EC0EE;
+	background: #333;
 }
 .color3 {
 	background: #ecf0f1;
 }
 .color4 {
-	background: #3498db;
+	background: #333;
 }
 
 /*** Individual section styles and separators ***/
@@ -198,8 +200,8 @@ svg#bigTriangleColor {
 }
 
 #bigTriangleColor path {
-	fill: #3498db;
-	stroke: #3498db;
+	fill: #333;
+	stroke: #333;
 	stroke-width: 2;
 }
 
@@ -209,8 +211,8 @@ svg#bigTriangleColor {
     stroke: #ecf0f1;
 }
 #curveUpColor path{
-	fill: #7ec0ee;
-    stroke: #7ec0ee;
+	fill: #333;
+    stroke: #333;
 }
 #curveUpColor2 path{
 	fill: #ecf0f1;
@@ -231,14 +233,14 @@ svg#bigTriangleColor {
 .ss-style-multitriangles::before {
 	top: -25px;
 	background: inherit;
-	box-shadow: -50px 50px 0 #3498db, 50px -50px 0 #3498db;
+	box-shadow: -50px 50px 0 #333;, 50px -50px 0 #333;
 }
 
 .ss-style-multitriangles::after {
 	bottom: -25px;
 	z-index: 10;
 	background: inherit;
-	box-shadow: -50px 50px 0 #3498db, 50px -50px 0 #3498db;
+	box-shadow: -50px 50px 0 #333;, 50px -50px 0 #333;
 }
 
 /* Rounded corners */
@@ -289,7 +291,7 @@ svg#bigTriangleColor {
 	left: 0;
 	z-index: -1;
 	height: 90px;
-	background: #3498db;
+	background: #333;
 }
 
 .ss-style-invertedrounded::before {
@@ -315,8 +317,8 @@ svg#bigTriangleColor {
 	left: 0;
 	width: 100%;
 	height: 50px;
-	background-image: -webkit-gradient(linear, 100% 0, 0 100%, color-stop(0.5, #3498db), color-stop(0.5, #2980b9));
-	background-image: linear-gradient(to right, #3498db 50%, #2980b9 50%);
+	background-image: -webkit-gradient(linear, 100% 0, 0 100%, color-stop(0.5, #333;), color-stop(0.5, #2980b9));
+	background-image: linear-gradient(to right, #333; 50%, #2980b9 50%);
 	-webkit-background-size: 130px 100%;
 	background-size: 130px 100%;
 }
@@ -334,19 +336,19 @@ svg#bigTriangleColor {
 
 .ss-style-zigzag::before {
 	top: -90px;
-	background-image: -webkit-gradient(linear, 0 0, 300% 100%, color-stop(0.25, transparent), color-stop(0.25, #3498db));
+	background-image: -webkit-gradient(linear, 0 0, 300% 100%, color-stop(0.25, transparent), color-stop(0.25, #333;));
 	background-image:
 		linear-gradient(315deg, #3093d5 25%, transparent 25%),
-		linear-gradient( 45deg, #3498db 25%, transparent 25%);
+		linear-gradient( 45deg, #333; 25%, transparent 25%);
 	background-position: 50%;
 }
 
 .ss-style-zigzag::after {
 	top: 100%;
-	background-image: -webkit-gradient(linear, 0 0, 300% 100%, color-stop(0.25, #3498db), color-stop(0.25, #2980b9));
+	background-image: -webkit-gradient(linear, 0 0, 300% 100%, color-stop(0.25, #333;), color-stop(0.25, #2980b9));
 	background-image: 
-		linear-gradient(135deg, #3498db 25%, transparent 25%),
-		linear-gradient(225deg, #3498db 25%, transparent 25%);
+		linear-gradient(135deg, #333; 25%, transparent 25%),
+		linear-gradient(225deg, #333; 25%, transparent 25%);
 	background-position: 50%;
 }
 
@@ -406,8 +408,8 @@ svg#bigTriangleColor {
 
 /* Big half circle */
 #bigHalfCircle path {
-	fill: #3498db;
-	stroke: #3498db;
+	fill: #333;
+	stroke: #333;
 }
 
 /* Big triangle with shadow */
@@ -433,14 +435,14 @@ svg#bigTriangleColor {
 
 .ss-style-inczigzag::before {
 	top: 0;
-	background-image: -webkit-gradient(linear, 0 0, 10% 100%, color-stop(0.5, #2980b9), color-stop(0.5, #3498db));
-	background-image: linear-gradient(15deg, #3498db 50%, #2980b9 50%);
+	background-image: -webkit-gradient(linear, 0 0, 10% 100%, color-stop(0.5, #2980b9), color-stop(0.5, #333;));
+	background-image: linear-gradient(15deg, #333; 50%, #2980b9 50%);
 }
 
 .ss-style-inczigzag::after {
 	bottom: 0;
-	background-image: -webkit-gradient(linear, 0 0, 10% 100%, color-stop(0.5, #3498db), color-stop(0.5, #2980b9));
-	background-image: linear-gradient(15deg, #2980b9 50%, #3498db 50%);
+	background-image: -webkit-gradient(linear, 0 0, 10% 100%, color-stop(0.5, #333;), color-stop(0.5, #2980b9));
+	background-image: linear-gradient(15deg, #2980b9 50%, #333; 50%);
 }
 
 /* Castle */
@@ -450,13 +452,13 @@ svg#bigTriangleColor {
 	height: 50px;
 	background-size: 200px 100%;
 	top: 0;
-	background-image: -webkit-linear-gradient(40deg, #3498db 50%, #2980b9 50%);
-	background-image: linear-gradient(40deg, #3498db 50%, #2980b9 50%);
+	background-image: -webkit-linear-gradient(40deg, #333; 50%, #2980b9 50%);
+	background-image: linear-gradient(40deg, #333; 50%, #2980b9 50%);
 }
 
 /* Alternative slit with inner shadow */
 #slitPath1 {
-	fill: #3498db;
+	fill: #333;
 	stroke: red;
 	stroke-width: 0;
 }
@@ -475,8 +477,8 @@ svg#bigTriangleColor {
 
 .ss-style-foldedcorner::before {
 	right: 0;
-	background-image: -webkit-linear-gradient(top left, #37a2ea 50%, #3498db 50%);
-	background-image: linear-gradient(315deg, #3498db 50%, #37a2ea 50%);
+	background-image: -webkit-linear-gradient(top left, #37a2ea 50%, #333; 50%);
+	background-image: linear-gradient(315deg, #333; 50%, #37a2ea 50%);
 }
 
 .ss-style-foldedcorner::after {
@@ -538,12 +540,12 @@ svg#bigTriangleColor {
 
 /* Stamp */
 #stamp path {
-    fill: #7ec0ee;
-    stroke: #7ec0ee;
+    fill: #333;
+    stroke: #333;
 }
 #stamp2 path {
-    fill: #7ec0ee;
-    stroke: #7ec0ee;
+    fill: #333;
+    stroke: #333;
 }
 
 /* Clouds */
